//
//  Constants.swift
//  Tamboon
//
//  Created by Miroslav Djukic on 10/05/2020.
//  Copyright © 2020 Miroslav Djukic. All rights reserved.
//

import Foundation

struct C {
    
    // MARK: Color name constants
    
    static let formAccentColor = "formAccentColor"
    static let formColor = "formColor"
   
    // MARK: Label Strings
    
    static let cardNumber = "Card number"
    static let cardName = "Name on card"
    static let expiryMonth = "Expiry month"
    static let expiryYear = "Expiry year"
    static let securityCode = "Security code"
    static let amount = "Amount"
    static let successMessage = "Congrats! Donation has been placed"
    static let noCharities = "No charities at the moment"
    static let loading = "Loading..."
    
    // MARK: Button title constants
    
    static let pay = "Pay"
    static let dismiss = "Dismiss to root"
    static let clear = "Clear"
    static let done = "Done"
    
    // MARK: Textfield placeholder constants
    
    static let monthPlaceholder = "MM"
    static let yearPlaceholder = "YYYY"
    
    
    // MARK: Navigation title constants
    
    static let charities = "Charities"
    
}
